# Todo-app

./: README.md
Phase-1/: README.md  pyproject.toml  test_manual.py  test_performance.py
Phase-1/.specify/memory/: constitution.md
Phase-1/.specify/scripts/bash/: common.sh
Phase-1/history/prompts/001-todo-console-app/: 0001-todo-console-app-specification.spec.prompt.md  0003-todo-console-app-task-breakdown.tasks.prompt.md
Phase-1/history/prompts/002-intermediate-advanced-features/: 001-phase-2-feature-specification.spec.prompt.md  004-phase-2-implementation-kickoff.green.prompt.md
Phase-1/history/prompts/constitution/: 0001-initial-project-constitution.constitution.prompt.md
Phase-1/specs/001-todo-console-app/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
Phase-1/specs/001-todo-console-app/checklists/: requirements.md
Phase-1/specs/002-intermediate-advanced-features/: quickstart.md
Phase-1/src/: __main__.py
Phase-1/src/cli/: app.py  display.py  menu.py
Phase-1/src/models/: task.py
Phase-1/src/services/: task_manager.py
Phase-1/tests/integration/: test_complete_workflow.py  test_workflows.py
Phase-1/tests/unit/: test_recurrence_logic.py  test_task_filtering.py  test_task_manager.py  test_task_model.py  test_task_sorting.py  test_validation.py
Phase-2/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
Phase-2/backend/alembic/: env.py
Phase-2/backend/src/: config.py  database.py  main.py
Phase-2/backend/src/api/: __init__.py  auth.py  (+2 more)
Phase-2/backend/tests/: conftest.py
(+119 files in other folders)
