[project]
name = "todo-app"
version = "0.1.0"
description = "In-memory Todo console application"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
