[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Todo Web Application"
readme = "README.md"
authors = [
    { name = "MSohaibShahzad", email = "sohaibshahzad30@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.30.0",
]
